[gd_scene load_steps=13 format=3 uid="uid://dymngijkrptcc"]

[ext_resource type="Script" uid="uid://dtfto6htrvfm5" path="res://Arena/tile_3d.gd" id="1_5v3qr"]
[ext_resource type="PackedScene" uid="uid://cqxo8j6lh1au8" path="res://Downloaded/bricks_A.tscn" id="2_wh67p"]
[ext_resource type="ArrayMesh" uid="uid://b3xxievahudgm" path="res://Cards/Utilities/CardModel/CardMeshExt.res" id="3_mf1uq"]
[ext_resource type="Texture2D" uid="uid://dkes2i4j5tjot" path="res://Images/Textures/metall005-new-tileable.png" id="4_ifjyk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5v3qr"]

[sub_resource type="QuadMesh" id="QuadMesh_0bhp4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5v3qr"]
cull_mode = 2
albedo_color = Color(0.205117, 0.205117, 0.205117, 1)

[sub_resource type="QuadMesh" id="QuadMesh_5v3qr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wh67p"]
emission_enabled = true
emission = Color(0.694118, 0.811765, 0, 1)
emission_energy_multiplier = 1.72

[sub_resource type="BoxShape3D" id="BoxShape3D_mf1uq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w0pxh"]
albedo_texture = ExtResource("4_ifjyk")

[sub_resource type="BoxMesh" id="BoxMesh_27ivk"]
material = SubResource("StandardMaterial3D_w0pxh")
size = Vector3(0.965, 0.995, 0.795)

[node name="Tile3D" type="Node3D"]
script = ExtResource("1_5v3qr")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_5v3qr")

[node name="TileMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("QuadMesh_0bhp4")
surface_material_override/0 = SubResource("StandardMaterial3D_5v3qr")

[node name="bricks_A3" parent="TileMesh" instance=ExtResource("2_wh67p")]
transform = Transform3D(0.487551, 0, 0, 0, 0.487551, 0, 0, 0, 0.487551, 0, 1.95836e-08, -0.448021)

[node name="CardMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1.13, 0, 0, 0, 1.13, 0, 0, 0, 1.13, 0, 0.0599931, -0.553633)
visible = false
mesh = ExtResource("3_mf1uq")

[node name="Badge" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.02, 0)
billboard = 1
vertical_alignment = 0

[node name="Highlight" type="MeshInstance3D" parent="."]
transform = Transform3D(0.925, 0, 0, 0, -4.0433033e-08, 0.925, 0, -0.925, -4.0433033e-08, 0, 0.0333439, 0)
visible = false
mesh = SubResource("QuadMesh_5v3qr")
surface_material_override/0 = SubResource("StandardMaterial3D_wh67p")

[node name="HoveredArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HoveredArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.41514373, 0)
shape = SubResource("BoxShape3D_mf1uq")

[node name="LeaderBadge" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.08405161, 0, 0, 0, 1, 0, 0, 0)
visible = false
mesh = SubResource("BoxMesh_27ivk")
